tests/machine/x/cpp/string_prefix_slice.mochi.error
line 7: ../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp:7:25: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
    7 |         (cout << (s1[0] == prefix));
      |                   ~~~~~~^~~~~~~~~
../../../tests/machine/x/cpp/string_prefix_slice.mochi.cpp:9:25: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
    9 |         (cout << (s2[0] == prefix));
      |                   ~~~~~~^~~~~~~~~

  6 | 	auto s1 = "forest";
  7 | 	(cout << (s1[0] == prefix));
  8 | 	auto s2 = "desert";
