tests/machine/x/cpp/string_prefix_slice.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto prefix = "fore";
	auto s1 = "forest";
	(cout << (s1[0] == prefix));
	auto s2 = "desert";
	(cout << (s2[0] == prefix));
	return 0;
}
